--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,23 @@
     "version": 2,
     "builds": [
       {
-        "src": "server.js",
+        "src": "api/events.js",
         "use": "@vercel/node",
         "runtime": "edge"
+      },
+      {
+        "src": "server.js",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
+        "src": "/api/events",
+        "dest": "api/events.js"
+      },
+      {
         "src": "/(.*)",
-        "dest": "/server.js"
+        "dest": "server.js"
       }
     ]
- }
-  
+}  
